# ray

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PRODUCTION_CHECKLIST.md  QUICK_START.md  README.md  SECURITY.md  config.json  install.sh  main.py  pyproject.toml  requirements.txt  setup.py  setup_model.sh
.github/workflows/: test.yml
models/sound/: voices.json
pda/: __init__.py  config.py  power_monitor.py  utils.py  voice_engine.py
tests/: __init__.py  test_pda.py
